# transformer

./: .gitignore  .pre-commit-config.yaml  Containerfile  Makefile  README.md  pyproject.toml  renovate.json  tox.ini
.github/: dependabot.yml
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: code_release.yaml  container_release.yaml  main.yml  transform.yaml  transformer.yaml  update_cloud_data.yaml
docs/api/: swagger.yaml
scripts/: cid2civ
src/: update_testdata.py
src/cloud-image-directory/: __init__.py  cli.py  config.py
src/cloud-image-directory/api/: server.py
src/cloud-image-directory/api/routes/: google.py
src/cloud-image-directory/update_images/: aws.py  azure.py  google.py
src/cloudimagedirectory/: __init__.py  cli.py  config.py  transformer.py
src/cloudimagedirectory/api/: server.py
src/cloudimagedirectory/api/routes/: health.py
src/cloudimagedirectory/api/schema/: azure.yml  health.yml
src/cloudimagedirectory/connection/: connection.py
src/cloudimagedirectory/filter/: filter.py
src/cloudimagedirectory/format/: format_aws.py  format_azure.py  format_google.py
src/cloudimagedirectory/s3/: s3.py
src/cloudimagedirectory/transform/: transform.py
src/cloudimagedirectory/update_images/: aws.py  azure.py  google.py
src/rhelocator/: __init__.py  cli.py  config.py  update_images.py
src/rhelocator/api/: config.py  server.py
src/rhelocator/api/routes/: aws.py  azure.py  gcp.py  health.py
src/rhelocator/api/schema/: aws.yml  gcp.yml  health.yml
src/rhelocator/update_images/: aws.py  azure.py  gcp.py  google.py  schema.py
tests/: conftest.py  test_cli.py  test_update_images.py
tests/api/: test_server.py
tests/connection/: test_connection.py
tests/filter/: test_filter.py
tests/scripts/: test_cid2civ.py
tests/scripts/testdata/cid2civ/: aws.cid  aws.civ  aws.txt  azure.cid  azure.civ  azure.txt  google.cid  google.civ  google.txt
tests/scripts/testdata/website/images/v1/idx/list/: image-names
tests/scripts/testdata/website/images/v1/idx/list/sort-by-date-google/: 0
tests/transformer/: aws_test.py  azure_test.py  google_test.py  idx_images_by_name_test.py  idx_list_image_latest_test.py  idx_list_sort_by_date_test.py  test_all.py  test_aws_rhel.py  test_azure_rhel.py  test_google_rhel.py  test_list_os.py  test_list_provider.py  test_list_region.py  test_list_version.py  test_transform.py
tests/transformer/format/: test_aws.py  test_azure.py  test_google.py
tests/transformer/testdata/aws/af-south-1/: rhel_6.10_hvm_x86_64_hourly2
tests/transformer/testdata/expected/aws/af-south-1/: rhel_6.10_hvm_x86_64_hourly2
tests/transformer/testdata/expected/azure/eastus/: osa_osa_311_x64
tests/transformer/testdata/expected/google/global/: rhel_7_x86_64
tests/transformer/testdata/expected/idx/list/: image-names
tests/transformer/testdata/expected/idx/list/sort-by-date/: 0
tests/transformer/testdata/expected/idx/list/sort-by-date-aws/: 0
tests/transformer/testdata/expected/idx/list/sort-by-date-azure/: 0
tests/transformer/testdata/expected/idx/list/sort-by-date-google/: 0
tests/transformer/testdata/expected/v1/idx/list/: image-names
tests/transformer/testdata/expected/v1/idx/list/sort-by-date-aws/: 0
tests/transformer/testdata/expected/v1/idx/list/sort-by-date-azure/: 0
tests/transformer/testdata/expected/v1/idx/list/sort-by-date-google/: pages
tests/transformer/testdata/expected/v2/: all
tests/transformer/testdata/expected/v2/os/: list
tests/transformer/testdata/expected/v2/os/rhel/provider/: list
tests/transformer/testdata/expected/v2/os/rhel/provider/google/version/: list
tests/transformer/testdata/expected/v2/os/rhel/provider/google/version/7/region/: list
tests/transformer/testdata/expected/v2/os/rhel/provider/google/version/7/region/global/image/: list
tests/transformer/testdata/google/global/: rhel_7_x86_64
tests/transformer/testdata/input/: aws-af-south-1.json
tests/transformer/testdata/input/azure/: eastus.json
tests/transformer/testdata/input/raw/azure/: eastus.json
tests/transformer/testdata/input/raw/google/: all.json
tests/transformer/testdata/v1/idx/list/sort-by-date/: 0
tests/transformer/testdata/v1/idx/list/sort-by-date-google/: 0
tests/transformer/testdata/v2/: all
tests/update_images/: test_aws.py  test_azure.py  test_gcp.py  test_google.py  test_json_schema.py
tests/update_images/testdata/: aws_list_images.json  azure_list_images.json  formatted_images.json  gcp_list_images.json  google_list_images.json  update.sh
