[tool.poetry]
name = "cloudimagedirectory"
version = "0.1.0"
description = "Locate RHEL images in public clouds"
authors = [
    "Felix Kolwa <felix@redhat.com>",
    "Major Hayden <major@redhat.com>",
    "Nina Olear <nolear@redhat.com>"
]
maintainers = [
    "Felix Kolwa <felix@redhat.com>",
    "Major Hayden <major@redhat.com>",
    "Nina Olear <nolear@redhat.com>"
]
license = "Apache-2.0"
readme = "README.md"
packages = [
    {include = "cloudimagedirectory", from = "src"}
]
include = [
    { path = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.130"
requests = "^2.30.0"
google-cloud-compute = "^1.11.0"
click = "^8.1.3"
jsonschema = "^4.17.3"
flask = "2.2.5"
flasgger = "^0.9.5"
python-dotenv = "^1.0.0"
waitress = "^2.1.2"
flask-cors = "^3.0.10"
structlog = "^23.1.0"
pytz = "^2023.3"
pandas = "^2.0.1"
types-pytz = "^2023.3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-randomly = "^3.12.0"
pytest-xdist = {version = "^3.2.1", extras = ["psutil"]}
pre-commit = "^3.3.1"
ipython = "^8.13.2"
pytest-sugar = "^0.9.7"
rich = "^13.3.5"

[tool.poetry.scripts]
cloudimagedirectory-updater = "cloudimagedirectory.cli:cli"
cloudimagedirectory-transformer = "cloudimagedirectory.transformer:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Much of what is below this line is borrowed from poetry's pyproject.yaml.
# https://github.com/python-poetry/poetry/blob/master/pyproject.toml
[tool.isort]
py_version = 39
profile = "black"
force_single_line = true
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["src", "tests"]
extend_skip = ["setup.py"]

[tool.black]
target-version = ['py39']
preview = true
force-exclude = '''
.*/setup\.py$
'''

[tool.pytest.ini_options]
addopts = "-n auto --cov=src/cloudimagedirectory --cov-report=term-missing --cov-report=xml --cov-branch"
testpaths = [
    "tests"
]


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']
